# data-import-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  employees.csv  employees.json  pyproject.toml
.github/workflows/: ci.yml
dev/: mock_server.py
frontend/: app.js  index.html  styles.css
src/: api_client.py  config.py  database.py  fetch_cmd.py  models.py  seed_cmd.py  service.py
tests/: conftest.py  test_api_client.py  test_database.py  test_e2e.py  test_fetch_cmd.py  test_models.py  test_seed.py  test_service.py
