[tool.poetry]
name = "data-import-service"
version = "0.1.0"
description = "Authenticate against an external API, fetch employees, store to SQLite, and serve via FastAPI."
authors = ["Risto Bozhinov <bozhnovristo@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
httpx = "^0.27.0"
pydantic = { extras = ["email"], version = "^2.9.0" }
pydantic-settings = "^2.5.0"
tenacity = "^9.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
respx = "^0.21.0"
mypy = "^1.11.0"
ruff = "^0.6.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
